Adição do BootStrap 5
Adição do BootStrap 5 e correção do Sidebar com BootStrap

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,6 +17,9 @@
   z-index: 99;
   transition: all 0.5s ease;
 }
+.sidebar ol,.sidebar ul{
+  margin-left: -30px !important;
+}
 .sidebar.open{
   width: 250px;
 }
